nav buttons + pic + some css

--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--
+
+    
+
+I stole a lot of ideias from:
+https://alexanderameye.github.io/
+
+
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -12,11 +23,32 @@
 
     <body>
         <nav>
-            Nav
+            <div class="menuOptions">
+                <a href="style.css">
+                    <div class="navButton activeNavButton">Home</div>
+                </a>
+                <a href="style.css">
+                    <div class="navButton">Blog</div>
+                </a>
+                <a href="style.css">
+                    <div class="navButton">Resume</div>
+                </a>
+                <a href="style.css">
+                    <div class="navButton">About</div>
+                </a>
+                <a href="style.css">
+                    <div class="navButton">human</div>
+                </a>
+
+                <div class="clear"></div>
+            </div>
         </nav>
 
         <header>
-            Hi! I'm JJ.
+            <img src="imgs/cool_selfie.jpg" class="coolPic" width="100" alt="a picture of me">
+
+            <h2>good morning</h2>
+            <p>i'm João Artur, but please call me <b>JJ</b>.</p>
         </header>
 
         <footer></footer>
