--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!--
 
-    
-
 I stole a lot of ideias from:
 https://alexanderameye.github.io/
-
-
+https://sara.fail/
+https://benadam.me/
 
 -->
 
@@ -47,9 +45,7 @@ https://alexanderameye.github.io/
 
         <main>
             <header>
-                <img src="imgs/cool_selfie.jpg" class="coolPic" width="100" alt="a picture of me">
-    
-                <h2>good morning</h2>
+                <h1>g'day!</h1>
                 <p>I'm João Artur</p>
             </header>
         </main>
