:lipstick: css updates

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                     <div class="navButton">About</div>
                 </a>
                 <a href="#">
-                    <div class="navButton">human</div>
+                    <div class="navButton">web 1.0</div>
                 </a>
 
                 <div class="clear"></div>
